<resources>
    <string name="app_name">Consultar Vôo</string>

    <string name="action_settings">Settings</string>
    <string name="label_voos_nome">Escolha suas opções</string>
    <string name="label_voos_preco">Preço: </string>
    <string name="label_voos_origem">Origem: </string>
    <string name="label_voos_destino">Destino: </string>
    <string name="label_voos_data">Data: </string>
    <string name="label_voos_horario">Horario: </string>
    <string name="label_voos_companhia">Companhia: </string>
    <string name="botao_enviar">Consultar Simples</string>

    <string name="title_activity_lista_voos">Lista de Voos</string>
    <string name="txt_lista_voos">Nenhum vôo encontrado</string>
    <string name="title_activity_detalhe_voos">Vôos Escolhidos</string>

</resources>
